minor changes into html files, BoA logo added to the pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bank of America — Login</title>
     <link rel="stylesheet" href="styles/styles.css" />
+    <script src="scripts/auth.js" defer></script>
+    <title>Bank of America — Login</title>
+    
   </head>
   <body>
     <header class="top-nav">
-      <img src="assets/logo.svg" alt="Bank of America" class="logo" />
+      <img src="assets/bank-of-america-logo-1.svg" alt="Bank of America" class="logo" />
       <nav>
         <ul class="nav-links">
           <li><a href="#">Personal</a></li>
@@ -67,6 +69,5 @@
       </p>
     </footer>
 
-    <script src="scripts/auth.js"></script>
   </body>
 </html>
