minor changes to index and css, banner img added to assets

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
 
       <section class="promo-banner">
-        <img src="assets/banner.jpg" alt="Financial Center" />
+        <img src="assets/BoAppl.jpg" alt="Financial Center" id="promo"/>
         <div class="promo-text">
           <h3>A new financial center in your neighborhood</h3>
           <p>
